# jessilver-django-messages

./: MANIFEST.in  README.md  pyproject.toml  setup.py
config/: settings.py  urls.py
jessilver_django_messages/: apps.py  middleware.py  session_messages.py  tests.py
jessilver_django_messages/static/jessilver/css/: jess-modal.css
jessilver_django_messages/static/jessilver/js/: jess-modal.js
jessilver_django_messages/templates/jessilver/: messages_portal.html
messages_test/: apps.py  urls.py  views.py
messages_test/static/css/: test-styles.css
messages_test/templates/: index.html
