[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jessilver-django-messages"
version = "0.1.0"
authors = [
    { name = "Jessé" },
]
description = "Mensagens modais sequenciais e seguras para Django com esforço zero."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=3.2",
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]
include = ["jessilver_django_messages*"]

[tool.setuptools.package-data]
"jessilver_django_messages" = [
    "static/jessilver/css/jess-modal.css",
    "static/jessilver/js/jess-modal.js",
    "templates/**/*",
]
